--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ toml = "0.5.9"
 serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.11.11", features = ["blocking"] }
 thiserror = "1.0.35"
+regex = "1.6.0"
+lazy_static = "1.4.0"
