--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 toml = "0.5.9"
 serde = { version = "1.0", features = ["derive"] }
-reqwest = { version = "0.11.11", features = ["blocking"] }
+reqwest = { version = "0.11.11", features = ["blocking", "json"] }
 thiserror = "1.0.35"
 regex = "1.6.0"
 lazy_static = "1.4.0"
+
